2004-08-13  Not Zed  <NotZed@Ximian.com>

	* mail-config.glade: replaced ssl selector with custom widget
	(gtkcombobox).  Giv the preferences, composer toplevel unique
	names.

2004-07-29  Not Zed  <NotZed@Ximian.com>

	* mail-config.glade: replaced source and transport selector with
	custom widget (gtkcombobox).

	* em-account-editor.[ch]: copy over mail-account-gui.[ch] and
	rename stuff.  Make a gobject.  Move most internals, internal.

2004-07-28  Not Zed  <NotZed@Ximian.com>

	* em-composer-prefs.c (em_composer_prefs_construct): get the
	toplevel tab as the root.
	(em_composer_prefs_construct): setup plugin metadata for composer
	prefs.

	* em-mailer-prefs.c (em_mailer_prefs_construct): setup plugin
	metadata for mail preferences.

	* em-config.c (em_config_target_new_prefs): new target for 'prefs'
	mode, everything global via gconf.

	* em-mailer-prefs.c (em_mailer_prefs_construct): get the gui from
	the preferences_toplevel not the preferences_tab window which we
	don't need.

	* mail-config.glade: rename the preferences 'toplevel' to
	preferences_toplevel so we can get it unparented.  And the
	composer toplevel to composer_toplevel.

	* em-folder-properties.c (em_folder_properties_show): remove test
	code.

	* em-format.h (struct _EMFormatPURI): add a free function
	callback.

	* em-format.c (emf_clear_puri_node): if the free function is set,
	call it.

2004-07-01  Rodney Dawes  <dobey@novell.com>

	* Makefile.am (BUILT_SOURCES): Remove $(error_i18n)
	(CLEANFILES): Put $(error_i18n) in here

2004-06-29  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree-model.c (folder_created_cb): call
	folder_subscribed directly from the async function not
	foldre_subscribed_cb, otherwise we run out of order.  Part of
	#60775.

	* em-vfolder-rule.c (source_add): setup exclusion for vfolder
	sources, noselect folders.  Bug #60794.

2004-06-23  Jeffrey Stedfast  <fejj@novell.com>

	* em-folder-selector.c (em_folder_selector_get_selected_path):